RESOLVED FIXED 243165
[LFC][IFC] Fix incorrect enum values in InlineLevelBox::Type
https://bugs.webkit.org/show_bug.cgi?id=243165
Summary [LFC][IFC] Fix incorrect enum values in InlineLevelBox::Type
zalan
Reported 2022-07-25 07:11:11 PDT
ssia
Attachments
[fast-cq]Patch (1.31 KB, patch)
2022-07-25 07:12 PDT, zalan
ews-feeder: commit-queue-
zalan
Comment 1 2022-07-25 07:12:21 PDT
Created attachment 461195 [details] [fast-cq]Patch
EWS
Comment 2 2022-07-26 14:20:38 PDT
Committed 252843@main (714cb095af54): <https://commits.webkit.org/252843@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 461195 [details].
Radar WebKit Bug Importer
Comment 3 2022-07-26 14:21:17 PDT
Note You need to log in before you can comment on or make changes to this bug.