[LFC][IFC] Fix incorrect enum values in InlineLevelBox::Type https://bugs.webkit.org/show_bug.cgi?id=243165

Reviewed by Antti Koivisto.

* Source/WebCore/layout/formattingContexts/inline/InlineLevelBox.h:

Canonical link: https://commits.webkit.org/252843@main